2008-02-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-shader.c: Small documentation and style fixes

	* tests/test-scale.c: Constify the gravities array.

2008-02-04  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_transform_stage_point):
	Check that x_out and y_out != NULL before setting their contents

2008-02-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-timeline.c: (clutter_timeline_rewind): updated
	documentation to take direction into account.

2008-02-04  Øyvind Kolås  <pippin@o-hand.com>

	* tests/test-fbo.c: (make_shader):
	* tests/test-shader.c: (main): multiply the resulting gl_FragColor
	with gl_Color before being done to take opacity into account in the
	GLSL fragments.

2008-02-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-actor.[ch]: added clutter_actor_get_shader and
	renamed clutter_actor_apply_shader to be clutter_actor_set_shader.
	Reindented/aligned header.
	* clutter/clutter-texture.c: (clutter_texture_paint): temporarily
	disable the shader on top of the clutter context's shader stack while
	rendering into the FBO.
	* tests/test-fbo.c: (main): s/apply_shader/set_shader/
	* tests/test-shader.c: (button_release_cb), (main):
	s/apply_shader/set_shader/

2008-02-03  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_set_rotationx):
	Add notify signal for set_rotate

	* clutter/clutter-texture.c:
	Add basic cleanup code for fbo's	

	* tests/test-fbo.c: (main):
	Minor notes.

	* clutter/osx/clutter-stage-osx.c: (clutter_stage_osx_realize):
	Turn on vblanking.

2008-02-03  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-shader.c:
	Minor formatting cleanups to fit in 80 cols.

	* clutter/clutter-texture.c:
	More safety checks, clean ups in clutter_texture_new_from_actor()

	* clutter/cogl/gl/cogl.c:
	Always clear the FBO initially when rendering

	* tests/test-fbo.c: